# elm-haskell-stm

./: LICENSE  README.md  RedPurpleBlue.elm  elm-haskell-stm.cabal  elm-package.json  package.json  prototype.js  stack.yaml
app/: Main.hs
src/: HighScores.hs  Lib.hs  RandomNames.hs  Utils.hs
